# tcc-credito-rural-api

./: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
app/: main.py
app/core/: config.py
app/models/: schemas.py
app/routers/: blockchain.py  safras.py
app/services/: blockchain.py
app/utils/: auth.py
contracts/: SafraToken.json
